--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <p>Loading model...</p>
         </div>
         <div id="instructions" class="instructions">
-          <p>Select a model from the dropdown above to view it</p>
+          <p>Loading 3D model...</p>
           <div class="controls-info">
             <p><strong>Controls:</strong></p>
             <p>• Left click + drag: Rotate</p>
