Update to React Three Fiber ripple system

--- a/index.html
+++ b/index.html
@@ -4,18 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GLB Ripple Sanity Test</title>
-    <style>
-      html, body { height: 100%; margin: 0; background: #000; }
-      canvas { display: block; }
-      #msg {
-        position: fixed; left: 12px; bottom: 12px; color: #9aa0a6;
-        font: 12px/1.4 ui-sans-serif, system-ui, -apple-system, "Segoe UI";
-        background: rgba(20,20,20,.5); padding: 8px 10px; border-radius: 8px;
-      }
-    </style>
   </head>
   <body>
-    <div id="msg">Hover the model: ripple should follow the cursor. If not, tell me what the console logs.</div>
-    <script type="module" src="/main.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
